# filelayer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-to-pypi.yml
src/filelayer/: __init__.py  cache.py  config.py  exceptions.py  factory.py  logging_utils.py  service.py
src/filelayer/providers/: __init__.py  base.py  local.py  s3.py
tests/: test_cache.py  test_factory.py  test_local_provider.py  test_s3_cache_integration.py  test_s3_provider.py  test_service.py
